[package]
name = "qm2d_split_op"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# https://doc.rust-lang.org/book/ch14-01-release-profiles.html
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
